deployment/kustomize/overlays/common/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: vbystr.dacdevops.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sampleapp-service
                port:
                  name: http
  # tls:
  #   - hosts:
  #     - vbystr.dacdevops.ru
  #     secretName: vbystr-cert
